--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 	<url>https://github.com/Azure/azure-event-hubs</url>
 	
 	<properties>
-		<proton-j-version>0.22.0</proton-j-version>
+		<proton-j-version>0.25.0</proton-j-version>
 	  	<junit-version>4.12</junit-version>
 		<slf4j-version>1.8.0-alpha2</slf4j-version>
 	</properties>
@@ -38,9 +38,7 @@
 	 	<dependency>
 	 	    <groupId>org.apache.qpid</groupId>
 	 	    <artifactId>proton-j</artifactId>
-			<scope>system</scope>
-			<systemPath>/Users/Sree/gits/qpid-proton-j/proton-j/target/proton-j-0.25.0-SNAPSHOT.jar</systemPath>
-	 	    <version>0.25.0-SNAPSHOT</version>
+	 	    <version>${proton-j-version}</version>
 	 	</dependency>   	
 		<dependency>
 	 	    <groupId>junit</groupId>
